--- a/NewsPortals/NewsPortal/news/templates/flatpages/default.html
+++ b/NewsPortals/NewsPortal/news/templates/flatpages/default.html
@@ -37,11 +37,11 @@
                                  <li><a class="dropdown-item" href="/search/">Поиск</a></li>
                                  <li><a class="dropdown-item" href="/news_list/">Новости</a></li>
                                  <li><a class="dropdown-item" href="/article_list/">Статьи</a></li>
-                                 <li><a class="dropdown-item" href="">Подписки</a></li>
+                                 <li><a class="dropdown-item" href="/subscriptions/">Подписки</a></li>
                                  <li><a class="dropdown-item" href="/news_create/">Добавить новость</a></li>
                                  <li><a class="dropdown-item" href="/article_create/">Добавить статью</a></li>
                                  <li><hr class="dropdown-divider" /></li>
-                                 <li><a class="dropdown-item" href="">Выход</a></li>
+                                 <li><a class="dropdown-item" href="/">Выход</a></li>
                             </ul>
                         </li>
                     </ul>h
